ClipIt-1.4.0-20110506001 - 06 May. 2011
	+ Added: Added option to automatically paste an entry after selecting it.
	+ Fixed: Re-enabled indicator since it should now work properly.

ClipIt-1.3.13-20110503001 - 03 May. 2011
	+ Fixed: Bug in the indicator code that makes ClipIt crash X under
			certain circumstances.

ClipIt-1.3.12-20110228001 - 28 Feb. 2011
	+ Fixed: Fixed a typo in the warnings.
	+ Fixed: Turned off appindicator because it's buggy.

ClipIt-1.3.11-20101224001 - 24 Dec. 2010
	+ Fixed: Removed some unneeded files from both the archive and git.
	+ Fixed: Changed git versioning scheme.

ClipIt-v1.3.11-22122010001 - 22 Dec. 2010
	+ Fixed: Indicator menu now actually refreshes properly.
	+ Fixed: Removed "Full history" and changed the wording in the
			"Preferences" dialog.
	+ Fixed: Imported "Select first item in menu" fix from Parcellite 0.9.3.

ClipIt-v1.3.10-21122010001 - 21 Dec. 2010
	+ Fixed: Imported fixes from Parcellite 0.9.3 (thanks to Doug Springer).
	+ Fixed: Fixed cast warnings when building on x86 machines.
	+ Fixed: Fixed build error on ubuntu 11.04.
	+ Fixed: Fixed problem with statusicon menu showing double content.
	+ Fixed: Fixed problem with clicking the statusicon menu multiple
			times killing the program.

ClipIt-v1.3.9-19122010001 - 19 Dec. 2010
	+ Fixed: Fixed error while compiling without indicator support.
	+ Fixed: Fixed a couple of memory leaks.

ClipIt-v1.3.8-18122010002 - 18 Dec. 2010
	+ Fixed: Updated configure script for 1.3.8.

ClipIt-v1.3.8-18122010001 - 18 Dec. 2010
	+ Fixed: Changed the "old" menu to look exactly like the indicator
			menu.
	+ Fixed: Changed the indicator menu to refresh automatically.

ClipIt-v1.3.7-12122010001 - 12 Dec. 2010
	+ Fixed: Changed E-Mail address and Project website.
	+ Fixed: Included all files that get generated by autogen.sh, so
			that now you don't need to run it anymore.

ClipIt-v1.3.6-06122010002 - 06 Dec. 2010
	+ Fixed: Fixed a small bug when building without indicator support.
